# tokio-i3ipc

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: actions.yml
async-i3ipc/: Cargo.toml  README.md
async-i3ipc/examples/: get_tree.rs  subscribe.rs  workspaces.rs
async-i3ipc/src/: lib.rs  stream.rs  util.rs
examples/: asyncstd_workspace.rs  get_tree.rs  manual_sub.rs  single_thread.rs  subscribe.rs  workspaces.rs
i3-ipc/: Cargo.toml  README.md
i3-ipc/examples/: sync_get.rs  sync_listen.rs
i3-ipc/src/: lib.rs
i3ipc-sync/: Cargo.toml  README.md
i3ipc-sync/examples/: sync_get.rs
i3ipc-sync/src/: lib.rs
i3ipc-types/: Cargo.toml  README.md
i3ipc-types/src/: event.rs  lib.rs  msg.rs  reply.rs
i3ipc-types/test/: last_tree.json  other_tree.json  tree.json  version.json
src/: codec.rs  event.rs  get.rs  lib.rs  msg.rs  reply.rs  util.rs
src/astd/: astd.rs
src/io/: mod.rs  read_and.rs  read_msg.rs  write_msg.rs
src/tokio/: mod.rs  util.rs
tokio-i3ipc/: Cargo.toml  README.md
tokio-i3ipc/examples/: get_tree.rs  single_thread.rs  subscribe.rs  workspaces.rs
tokio-i3ipc/src/: codec.rs  lib.rs  util.rs
