[package]
name = "tokio-i3ipc"
version = "0.8.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"
description = """
Bindings for i3 and tokio allowing async applications to communicate with i3 over
it's IPC interface. Contains futures implementations and convenience functions
for working with i3.
"""
categories = ["api-bindings", "asynchronous", "parsing", "gui"]
license = "MIT"
readme = "README.md"
keywords = ["i3", "ipc", "tokio", "async", "protocol"]
repository = "https://github.com/leshow/tokio-i3ipc"

[dependencies]
bytes = "0.5"
serde = "1.0"
serde_json = "1.0"
i3ipc-types = { version = "0.8", path = "i3ipc-types", features = ["async-traits"] }
tokio-util = { version = "0.3", features = ["codec"] }
tokio = { version = "0.2.19", features = ["io-std", "io-util", "net", "macros", "stream"] }

[dev-dependencies]
version-sync = "0.9"

[workspace]
members = ["./", "i3-ipc", "i3ipc-types"]

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"

[[example]]
name = "workspaces"
path = "examples/workspaces.rs"

[[example]]
name = "single_thread"
path = "examples/single_thread.rs"

[badges]
travis-ci = { repository = "leshow/tokio-i3ipc", branch = "master", service = "github" }
