[package]
name = "async-i3ipc"
version = "0.1.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
serde = "1.0"
serde_json = "1.0"
i3ipc-types = { path = "../i3ipc-types", features = ["async-std-traits"] }

[dev-dependencies]
version-sync = "0.9"

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"
required-features = ["async-std/attributes"]

[[example]]
name = "workspaces"
path = "examples/workspaces.rs"
required-features = ["async-std/attributes"]

[[example]]
name = "get_tree"
path = "examples/get_tree.rs"
required-features = ["async-std/attributes"]
