[package]
name = "async-i3ipc"
version = "0.6.0-alpha"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2021"
description = """
Bindings for i3 and async-std allowing async applications to communicate with i3 over
it's IPC interface. Contains futures implementations and convenience functions
for working with i3.
"""
categories = ["api-bindings", "asynchronous", "parsing", "gui"]
license = "MIT"
readme = "README.md"
keywords = ["i3", "ipc", "tokio", "async", "protocol"]
repository = "https://github.com/leshow/tokio-i3ipc/tree/master/async-i3ipc"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8", features = ["attributes"] }
serde = "1.0"
serde_json = "1.0"
i3ipc-types = { path = "../i3ipc-types", features = ["async-std-traits"] }

[features]
default = []
sway = ["i3ipc-types/sway"]

[dev-dependencies]
version-sync = "0.9"

[[example]]
name = "astd-subscribe"
path = "examples/subscribe.rs"
required-features = ["async-std/attributes"]

[[example]]
name = "astd-workspaces"
path = "examples/workspaces.rs"
required-features = ["async-std/attributes"]

[[example]]
name = "astd-get-tree"
path = "examples/get_tree.rs"
required-features = ["async-std/attributes"]
