[package]
name = "i3_ipc"
version = "0.3.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

[dependencies]
i3ipc-types = {version = "*", path = "../i3ipc-types" }
serde = "1.0"
serde_json = "1.0"

[[example]]
name = "sync_subscribe"
path = "examples/sync_subscribe.rs"

[[example]]
name = "sync_get"
path = "examples/sync_get.rs"