[package]
name = "i3_ipc"
version = "0.14.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2021"
description = """
For communicating with i3 over it's IPC interface synchronously
"""
categories = ["api-bindings", "parsing", "command-line-utilities", "gui"]
license = "MIT"
readme = "README.md"
keywords = ["i3", "ipc", "protocol", "json", "serde"]
repository = "https://github.com/leshow/tokio-i3ipc/tree/master/i3-ipc"

[dependencies]
i3ipc-types = { version = "0.14.0", path = "../i3ipc-types" }
serde = "1.0"
serde_json = "1.0"

[[example]]
name = "sync_listen"
path = "examples/sync_listen.rs"

[[example]]
name = "sync_get"
path = "examples/sync_get.rs"
