[package]
name = "i3ipc-types"
version = "0.8.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
description = """
Library containing all the types needed to communicate with i3, along with their serde implementations 
and implementations of many std traits
"""
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["i3", "ipc", "protocol", "json", "serde"]
categories = ["api-bindings", "parsing", "command-line-utilities", "gui"]
repository = "https://github.com/leshow/tokio-i3ipc/tree/master/i3ipc-types"

[dependencies]
serde = "1.0"
serde_repr = "0.1"
serde_derive = "1.0"
serde_json = "1.0"

[features]
default = []
async-traits = ["tokio"]

[dependencies.tokio]
version = "0.2.3"
features = ["io-std"]
optional = true
