[package]
name = "tokio-i3ipc"
version = "0.14.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2021"
description = """
Bindings for i3 and tokio allowing async applications to communicate with i3 over
it's IPC interface. Contains futures implementations and convenience functions
for working with i3.
"""
categories = ["api-bindings", "asynchronous", "parsing", "gui"]
license = "MIT"
readme = "README.md"
keywords = ["i3", "ipc", "tokio", "async", "protocol"]
repository = "https://github.com/leshow/tokio-i3ipc"

[dependencies]
bytes = "1.0"
serde = "1.0"
serde_json = "1.0"
i3ipc-types = { path = "../i3ipc-types", features = ["async-traits"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio = { version = "1.0", features = ["io-util", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }

[features]
default = []
sway = ["i3ipc-types/sway"]

[dev-dependencies]
version-sync = "0.9"

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"

[[example]]
name = "workspaces"
path = "examples/workspaces.rs"

[[example]]
name = "single_thread"
path = "examples/single_thread.rs"

[badges]
github-actions = { repository = "leshow/tokio-i3ipc", workflow = "actions" }
